[gd_scene load_steps=12 format=3 uid="uid://b0r67xw1qypr4"]

[ext_resource type="Script" path="res://scripts/GridHandler.gd" id="1_78tj7"]
[ext_resource type="MeshLibrary" uid="uid://edivfulhihge" path="res://meshes/library_roads.tres" id="1_87dhb"]
[ext_resource type="Script" path="res://scripts/stage.gd" id="1_r3wyl"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_msobk"]
[ext_resource type="Resource" uid="uid://b2kwwl5dwn5ug" path="res://resources/tiles/default.tres" id="2_unliq"]
[ext_resource type="Resource" uid="uid://b8mr36t8w4gtv" path="res://resources/tiles/straight_road_tile.tres" id="3_mniv1"]
[ext_resource type="Texture2D" uid="uid://bn2wfyeaqiteh" path="res://kenney_assets/kenney_isometric-roads/png/road.png" id="7_0r66u"]
[ext_resource type="Texture2D" uid="uid://bybxtk57xxqxw" path="res://kenney_assets/kenney_isometric-roads/png/roadEW.png" id="8_br2pf"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_63c6i"]
sky_top_color = Color(0.25098, 0.333333, 0.894118, 1)
sky_horizon_color = Color(0.636274, 0.693137, 0.782353, 1)
ground_bottom_color = Color(0.294118, 0.439216, 0.235294, 1)
ground_horizon_color = Color(0.636274, 0.693137, 0.782353, 1)

[sub_resource type="Sky" id="Sky_tuk7v"]
sky_material = SubResource("ProceduralSkyMaterial_63c6i")

[sub_resource type="Environment" id="Environment_rw2fi"]
background_mode = 2
sky = SubResource("Sky_tuk7v")
tonemap_mode = 2
glow_enabled = true

[node name="Stage1" type="Node3D"]
script = ExtResource("1_r3wyl")
available_tiles = Array[Resource("res://scripts/tile.gd")]([ExtResource("2_unliq"), ExtResource("3_mniv1")])

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rw2fi")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("1_87dhb")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(65534, 65534, 1, 65535, 65534, 1, 0, 65534, 1, 1, 65534, 1, 2, 65534, 1, 1, 65535, 1, 0, 65535, 0, 65535, 65535, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 1)
}
script = ExtResource("1_78tj7")

[node name="player" type="Node3D" parent="."]
script = ExtResource("2_msobk")

[node name="Camera3D" type="Camera3D" parent="player"]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0.708586, 8.00156, 2.09495)
projection = 1
size = 18.277

[node name="CanvasGroup" type="CanvasGroup" parent="."]

[node name="HFlowContainer" type="HFlowContainer" parent="CanvasGroup"]
offset_left = 22.0
offset_top = 566.0
offset_right = 1127.0
offset_bottom = 649.0

[node name="Button" type="Button" parent="CanvasGroup/HFlowContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_pressed = true
icon = ExtResource("7_0r66u")

[node name="Button2" type="Button" parent="CanvasGroup/HFlowContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
icon = ExtResource("8_br2pf")

[connection signal="pressed" from="CanvasGroup/HFlowContainer/Button" to="." method="set_active_tile" binds= [0]]
[connection signal="pressed" from="CanvasGroup/HFlowContainer/Button2" to="." method="set_active_tile" binds= [1]]
