[gd_scene load_steps=37 format=3 uid="uid://bf2etelow26rw"]

[ext_resource type="Script" path="res://scripts/stage.gd" id="1_nh7kn"]
[ext_resource type="Resource" uid="uid://b2kwwl5dwn5ug" path="res://resources/tiles/default.tres" id="2_at5e1"]
[ext_resource type="Resource" uid="uid://jx3k716m5ppu" path="res://resources/tiles/crossroads_tile.tres" id="3_4fws7"]
[ext_resource type="Resource" uid="uid://b8mr36t8w4gtv" path="res://resources/tiles/straight_road_tile.tres" id="3_i3s7h"]
[ext_resource type="Resource" uid="uid://c1g05b4om4kn1" path="res://resources/tiles/turn_road.tres" id="4_47wfd"]
[ext_resource type="Resource" uid="uid://dg6wi0yme6ho1" path="res://resources/tiles/road_t.tres" id="4_npj7u"]
[ext_resource type="MeshLibrary" uid="uid://edivfulhihge" path="res://meshes/library_roads.tres" id="6_7lp8f"]
[ext_resource type="PackedScene" uid="uid://kn5t58lf2lbq" path="res://scenes/stage_4.tscn" id="7_2ul8r"]
[ext_resource type="Script" path="res://scripts/GridHandler.gd" id="7_36due"]
[ext_resource type="Script" path="res://scripts/player.gd" id="8_hmdfy"]
[ext_resource type="Texture2D" uid="uid://chqiek4cyhjoq" path="res://kenney_assets/kenney_pixel-vehicle-pack/PNG/Cars/suv.png" id="9_lcm53"]
[ext_resource type="Texture2D" uid="uid://bn2wfyeaqiteh" path="res://kenney_assets/kenney_isometric-roads/png/road.png" id="9_tmruo"]
[ext_resource type="Texture2D" uid="uid://bybxtk57xxqxw" path="res://kenney_assets/kenney_isometric-roads/png/roadEW.png" id="10_dnw8o"]
[ext_resource type="Texture2D" uid="uid://b1nrwiphxyt8e" path="res://kenney_assets/kenney_isometric-roads/png/roadES.png" id="11_p8m47"]
[ext_resource type="Script" path="res://scenes/red_spawner.gd" id="12_yqfu0"]
[ext_resource type="Texture2D" uid="uid://lsq146uu5yrk" path="res://kenney_assets/kenney_puzzle-pack-2/PNG/Tiles blue/tileBlue_11.png" id="13_24bqh"]
[ext_resource type="PackedScene" uid="uid://ciypoloc1a8n1" path="res://cars/sedan.tscn" id="13_tcsll"]
[ext_resource type="Texture2D" uid="uid://dbam4f863ogs1" path="res://kenney_assets/kenney_puzzle-pack-2/PNG/Tiles red/tileRed_11.png" id="14_d7lf1"]
[ext_resource type="Texture2D" uid="uid://dekdcdlqfqhkp" path="res://kenney_assets/kenney_pixel-vehicle-pack/PNG/Cars/transport.png" id="14_ui31v"]
[ext_resource type="Script" path="res://scripts/destination.gd" id="15_dyhe4"]
[ext_resource type="Texture2D" uid="uid://bx0tkspnf84n0" path="res://kenney_assets/kenney_puzzle-pack-2/PNG/Tiles red/tileRed_09.png" id="16_68u4k"]
[ext_resource type="AudioStream" uid="uid://dy7lox0bugfdw" path="res://audio/jingles_STEEL10.ogg" id="18_8rvyt"]
[ext_resource type="Texture2D" uid="uid://bvkl4vl0vnax" path="res://kenney_assets/kenney_isometric-roads/png/crossroad.png" id="18_v200p"]
[ext_resource type="Texture2D" uid="uid://l7ooaesneebo" path="res://kenney_assets/kenney_isometric-roads/png/crossroadESW.png" id="19_0ipi2"]
[ext_resource type="PackedScene" uid="uid://dlvqivtu8cv88" path="res://cars/van.tscn" id="22_im56g"]
[ext_resource type="Texture2D" uid="uid://btyddlby6lt1q" path="res://kenney_assets/kenney_puzzle-pack-2/PNG/Tiles blue/tileBlue_09.png" id="25_e8tgu"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_63c6i"]
sky_top_color = Color(0.25098, 0.333333, 0.894118, 1)
sky_horizon_color = Color(0.636274, 0.693137, 0.782353, 1)
ground_bottom_color = Color(0.294118, 0.439216, 0.235294, 1)
ground_horizon_color = Color(0.636274, 0.693137, 0.782353, 1)

[sub_resource type="Sky" id="Sky_swpf3"]
sky_material = SubResource("ProceduralSkyMaterial_63c6i")

[sub_resource type="Environment" id="Environment_rw2fi"]
background_mode = 2
sky = SubResource("Sky_swpf3")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sk4jw"]
texture = ExtResource("14_d7lf1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c24ao"]
texture = ExtResource("9_lcm53")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iw0r0"]
texture = ExtResource("13_24bqh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_adaib"]
texture = ExtResource("14_ui31v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p01c2"]
texture = ExtResource("14_ui31v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7ed6t"]
texture = ExtResource("14_ui31v")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bldwx"]
radius = 0.1

[node name="Stage3" type="Node3D"]
script = ExtResource("1_nh7kn")
available_tiles = Array[Resource("res://scripts/tile.gd")]([ExtResource("2_at5e1"), ExtResource("3_4fws7"), ExtResource("4_npj7u"), ExtResource("3_i3s7h"), ExtResource("4_47wfd")])
cars_to_finish = 6
next_level = ExtResource("7_2ul8r")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rw2fi")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.3021, 0.825562, -0.476636, 0, 0.499998, 0.866027, 0.953276, -0.261627, 0.15105, 0, 6.3581, 0)
shadow_enabled = true

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("6_7lp8f")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
bake_navigation = true
data = {
"cells": PackedInt32Array(65534, 65534, 1441793, 65535, 65534, 9, 0, 65534, 9, 2, 65534, 655361, 1, 65535, 655361, 0, 65535, 9, 65535, 65535, 9, 65534, 0, 655361, 65535, 0, 1, 0, 0, 1048577, 1, 0, 1, 2, 0, 1, 2, 65535, 655361, 65534, 65535, 655361, 65534, 1, 1, 65535, 1, 1, 0, 1, 1, 1, 1, 1048577, 2, 1, 1, 65534, 65533, 1, 65535, 65533, 1, 0, 65533, 655361, 65533, 65535, 655361, 2, 65533, 655361, 1, 65533, 655361, 1, 65534, 655361, 65533, 65533, 655361, 65533, 65534, 655361, 65533, 0, 655361, 65533, 1, 655361, 65532, 65533, 655361, 65532, 65534, 655361, 65532, 65535, 655361, 65532, 0, 655361, 65532, 1, 655361, 65531, 65535, 655362, 65532, 65532, 1, 65533, 65532, 1, 65534, 65532, 1, 65535, 65532, 1, 0, 65532, 1, 1, 65532, 1, 2, 65532, 1, 65531, 65534, 655362, 2, 65531, 1048579, 3, 1, 3)
}
script = ExtResource("7_36due")

[node name="player" type="Node3D" parent="."]
script = ExtResource("8_hmdfy")
money = 7000

[node name="Camera3D" type="Camera3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 0, 6, 1.5)
current = true
size = 8.0

[node name="CanvasGroup" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CanvasGroup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778

[node name="MarginContainer" type="MarginContainer" parent="CanvasGroup/AspectRatioContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CarsContainer" type="PanelContainer" parent="CanvasGroup/AspectRatioContainer/MarginContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasGroup/AspectRatioContainer/MarginContainer/CarsContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="CanvasGroup/AspectRatioContainer/MarginContainer/CarsContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Incomming cars"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasGroup/AspectRatioContainer/MarginContainer/CarsContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasGroup/AspectRatioContainer/MarginContainer/CarsContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="CanvasGroup/AspectRatioContainer/MarginContainer/CarsContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/h_separation = 5

[node name="Panel" type="Panel" parent="CanvasGroup/AspectRatioContainer/MarginContainer/CarsContainer/VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_sk4jw")

[node name="Panel2" type="Panel" parent="CanvasGroup/AspectRatioContainer/MarginContainer/CarsContainer/VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_c24ao")

[node name="Panel3" type="Panel" parent="CanvasGroup/AspectRatioContainer/MarginContainer/CarsContainer/VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_c24ao")

[node name="Panel4" type="Panel" parent="CanvasGroup/AspectRatioContainer/MarginContainer/CarsContainer/VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_c24ao")

[node name="HFlowContainer2" type="HFlowContainer" parent="CanvasGroup/AspectRatioContainer/MarginContainer/CarsContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/h_separation = 5

[node name="Panel" type="Panel" parent="CanvasGroup/AspectRatioContainer/MarginContainer/CarsContainer/VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_iw0r0")

[node name="Panel2" type="Panel" parent="CanvasGroup/AspectRatioContainer/MarginContainer/CarsContainer/VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer2"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_adaib")

[node name="Panel3" type="Panel" parent="CanvasGroup/AspectRatioContainer/MarginContainer/CarsContainer/VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer2"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_p01c2")

[node name="Panel4" type="Panel" parent="CanvasGroup/AspectRatioContainer/MarginContainer/CarsContainer/VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer2"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_7ed6t")

[node name="MoneyContainer" type="PanelContainer" parent="CanvasGroup/AspectRatioContainer/MarginContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasGroup/AspectRatioContainer/MarginContainer/MoneyContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="CanvasGroup/AspectRatioContainer/MarginContainer/MoneyContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Cash"
horizontal_alignment = 1

[node name="MoneyLabel" type="Label" parent="CanvasGroup/AspectRatioContainer/MarginContainer/MoneyContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "1000 $"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasGroup/AspectRatioContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Button_start" type="Button" parent="CanvasGroup/AspectRatioContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Start"

[node name="HFlowContainer" type="HFlowContainer" parent="CanvasGroup/AspectRatioContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Button" type="Button" parent="CanvasGroup/AspectRatioContainer/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 48
toggle_mode = true
button_pressed = true
text = "200"
icon = ExtResource("9_tmruo")
icon_alignment = 1

[node name="Button2" type="Button" parent="CanvasGroup/AspectRatioContainer/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 48
toggle_mode = true
text = "200"
icon = ExtResource("18_v200p")
icon_alignment = 1

[node name="Button3" type="Button" parent="CanvasGroup/AspectRatioContainer/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 48
toggle_mode = true
icon = ExtResource("19_0ipi2")
icon_alignment = 1

[node name="Button4" type="Button" parent="CanvasGroup/AspectRatioContainer/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 48
toggle_mode = true
icon = ExtResource("10_dnw8o")
icon_alignment = 1

[node name="Button5" type="Button" parent="CanvasGroup/AspectRatioContainer/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 48
toggle_mode = true
icon = ExtResource("11_p8m47")
icon_alignment = 1

[node name="SimulationGroup" type="CanvasLayer" parent="."]
visible = false
follow_viewport_enabled = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="SimulationGroup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778

[node name="MarginContainer" type="MarginContainer" parent="SimulationGroup/AspectRatioContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="SimulationGroup/AspectRatioContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="NextButton" type="Button" parent="SimulationGroup/AspectRatioContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Next level"

[node name="Button" type="Button" parent="SimulationGroup/AspectRatioContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Retry"

[node name="spawner" type="Node3D" parent="." node_paths=PackedStringArray("end_point") groups=["spawner"]]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -4.4478, 0.2, -0.5)
script = ExtResource("12_yqfu0")
cars_to_spawn = Array[PackedScene]([ExtResource("13_tcsll"), ExtResource("13_tcsll"), ExtResource("13_tcsll")])
end_point = NodePath("../destination")

[node name="Timer" type="Timer" parent="spawner"]
wait_time = 3.0
one_shot = true

[node name="Sprite3D" type="Sprite3D" parent="spawner"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, -0.165318, 0)
texture = ExtResource("14_d7lf1")

[node name="spawner2" type="Node3D" parent="." node_paths=PackedStringArray("end_point") groups=["spawner"]]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -4.5, 0.2, -1.5)
script = ExtResource("12_yqfu0")
cars_to_spawn = Array[PackedScene]([ExtResource("22_im56g"), ExtResource("22_im56g"), ExtResource("22_im56g")])
end_point = NodePath("../destination2")

[node name="Timer" type="Timer" parent="spawner2"]
wait_time = 3.0
one_shot = true

[node name="Sprite3D" type="Sprite3D" parent="spawner2"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, -0.165318, 0)
texture = ExtResource("13_24bqh")

[node name="destination" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -4.5)
script = ExtResource("15_dyhe4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="destination"]
shape = SubResource("CylinderShape3D_bldwx")

[node name="Sprite3D" type="Sprite3D" parent="destination"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, 0.0287817, 0)
texture = ExtResource("16_68u4k")

[node name="destination2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, 1.5)
script = ExtResource("15_dyhe4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="destination2"]
shape = SubResource("CylinderShape3D_bldwx")

[node name="Sprite3D" type="Sprite3D" parent="destination2"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, 0.0287817, 0)
texture = ExtResource("25_e8tgu")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_8rvyt")

[connection signal="pressed" from="CanvasGroup/AspectRatioContainer/MarginContainer/VBoxContainer/Button_start" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SimulationGroup/AspectRatioContainer/MarginContainer/VBoxContainer/NextButton" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="SimulationGroup/AspectRatioContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_retry_pressed"]
[connection signal="timeout" from="spawner/Timer" to="spawner" method="_on_timer_timeout"]
[connection signal="timeout" from="spawner2/Timer" to="spawner2" method="_on_timer_timeout"]
[connection signal="body_entered" from="destination" to="destination" method="_on_body_entered"]
[connection signal="body_entered" from="destination2" to="destination2" method="_on_body_entered"]
